...
                            <constraint firstAttribute="trailingMargin" secondItem="jLW-ii-cTH" secondAttribute="trailing" id="h0Z-LM-d3F"/>
                            <constraint firstItem="jLW-ii-cTH" firstAttribute="centerY" secondItem="kPI-IU-kuK" secondAttribute="centerY" id="hrQ-X9-gyc"/>
                            <constraint firstAttribute="trailingMargin" secondItem="RTk-dm-ePz" secondAttribute="trailing" id="nG5-3g-Nho"/>
                            <constraint firstItem="JsG-rC-pD4" firstAttribute="top" secondItem="lPp-HF-Lwr" secondAttribute="bottom" constant="20" id="yr3-2K-fba"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Display" id="ATO-p1-Jn1">
                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="eYt-3h-A5y"/>
                    </navigationItem>
                    <connections>
                        <outlet property="classLabelRegistered" destination="JsG-rC-pD4" id="bD2-I9-kwZ"/>
                        <outlet property="firstNameLabelRegistered" destination="lo5-HM-A1Q" id="HNM-Xt-fng"/>
                        <outlet property="imageView" destination="RTk-dm-ePz" id="jxp-I9-pa7"/>
...
                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="aQz-qp-NDV">
                                <rect key="frame" x="20" y="86" width="233" height="103"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="XCt-zB-BOD">
                                        <rect key="frame" x="0.0" y="19" width="91" height="65"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YtS-lL-jvS">
                                                <rect key="frame" x="0.0" y="0.0" width="91" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                                <connections>
                                                    <action selector="touchOutside:" destination="BYZ-38-t0r" eventType="touchDragOutside" id="Qla-IQ-hGP"/>
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jpb-cB-WDG">
                                                <rect key="frame" x="0.0" y="35" width="91" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                        </subviews>
                                        <color key="tintColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
...
                                <include reference="y1f-Tv-HsB"/>
                                <include reference="n7B-aG-UA6"/>
                                <include reference="ov6-zP-WNB"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Form" id="haf-Og-oEW">
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="id2-Vp-EiJ">
                            <connections>
                                <segue destination="q5V-E8-BtO" kind="show" identifier="detailViewControllerSegue" id="vBS-vh-5Ud"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="MWw-f7-f4a" id="eta-sY-LW6"/>
                            <outlet property="delegate" destination="MWw-f7-f4a" id="G3W-AX-Lv8"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="List" id="4D3-Rr-Tia">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="535-Td-2J3">
                            <connections>
                                <segue destination="BYZ-38-t0r" kind="show" id="27v-F5-9Xs"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
